--- a/src/components/featured/featured.module.css
+++ b/src/components/featured/featured.module.css
@@ -1,2 +1,55 @@
 .container {
+  margin-top: 30px;
+}
+
+.title {
+  font-size: 96px;
+  font-weight: 300;
+}
+
+.post {
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+  gap: 50px;
+}
+
+.imgContainer {
+  flex: 1;
+  height: 500px;
+  position: relative;
+}
+
+.textContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.image {
+  object-fit: cover;
+}
+
+.postTitle {
+  font-size: 40px;
+}
+
+.postDesc {
+  font-size: 20px;
+  font-weight: 300;
+  color: var(--softTextcolor);
+}
+
+.postButton {
+  padding: 16px 20px;
+  border: none;
+  border-radius: 5px;
+  width: max-content;
+}
+
+@media screen and (max-width: 1920px) {
+  .title {
+    font-size: 66px;
+  }
 }
